kafka-manifest.yml
apiVersion: v1
kind: Service
metadata:
  name: stream
  namespace: kafka
spec:
  selector:
    app: stream-app
  ports:
  - port: 9092
    name: default
  - port: 9094
    name: outside
---
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: kafka
spec:
  selector:
    app: zookeeper
  ports:
  - port: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
      - name: zookeeper
        image: confluentinc/cp-zookeeper:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 2181
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stream
  namespace: kafka
spec:
  selector:
    matchLabels:
      app: stream-app
  template:
    metadata:
      labels:
        app: stream-app
    spec:
      containers:
      - name: stream
        image: wurstmeister/kafka:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
        ports:
        - containerPort: 9092
          name: plaintext
        # readinessProbe:
        #   exec:
        #     command:
        #       - 
        #   initialDelaySeconds: 5
        #   periodSeconds: 2
